fix spacing between spinner and loading text in lightbox

--- a/src/platform/web/ui/css/themes/element/theme.css
+++ b/src/platform/web/ui/css/themes/element/theme.css
@@ -716,6 +716,10 @@ button.link {
     display: flex;
 }
 
+.lightbox .loading > :not(:first-child) {
+    margin-left: 8px;
+}
+
 .lightbox .close {
     display: block;
     grid-area: close;
